src/App.css
.background-container {
  background-image: linear-gradient(#fd8298, #b176fe);
  width: 100%;
  height: 100vh;
}

.calendar-container {
  width: 55%;
  margin: auto;
  position: relative;
  top: 20px;
  padding-top: 200px;
}

.weekdays-container {
  display: flex;
  margin: auto;
  justify-content: space-around;
  background-color: white;
}

.weekdays-container .weekday {
  color: #808080;
}

.calendar {
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

button {
  background: white;
  border: none;
}

.date-picker-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background: white;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}

.date-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.date-picker-container div {
  font-size: 20px;
}

.date-picker-container svg {
  border-radius: 100px;
  background: #e8e8e8;
}

.selected {
  padding: 4px 6px;
  background-color: #fd6cbb;
  color: white;
  border-radius: 5px;
  filter: drop-shadow(2px 2px 2px #fd6cbb);
}

.date {
  padding: 7px;
}

.divided-calendar {
  display: grid;
  grid-template-columns: auto auto auto auto auto auto auto;
  background: white;
}

.individual-date {
  text-align: center;
  padding: 7px 0;
}

